Fixed Issue 107:  	 The height of the inline frame is not adjusted when a message is shown Fixed Problem 1. There is some space on bottom of Browser. This problem is occurred on only IE. 2. When showing alert messages below header, vertical scrollbar is doubled. related Issue 102:  	 add setting that the header is fixed on the browser top even if the browser is scrolled.
git-svn-id: https://infoscoop.googlecode.com/svn/trunk@159 d4e23b88-c782-11de-b6dc-25c59a28ecba

--- a/src/main/web/skin/styles.css
+++ b/src/main/web/skin/styles.css
@@ -72,7 +72,7 @@ a:hover
 }
 
 body.fixedPortalHeader {
-  overflow: auto;
+  overflow: hidden;
 }
 
 body.fixedPortalHeader #panels .panel{
